--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,12 @@
-*{
+* {
     font-family: 'Asap', sans-serif;
 }
+
+.bg-dots {
+    background-color: #00330e;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='448' height='448' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23004427' stroke-width='3.8'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23005512'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+}
+
 .glass {
     background: rgb(255 255 255 / 10%);
     box-shadow: 4px 7px 11px 0px rgb(125 102 117 / 24%);
@@ -9,124 +15,80 @@
     border-radius: 15px;
     border: 1px solid rgb(95 95 95 / 23%);
 }
-.glass-child{
-    
+
+.glass-child {
     background: rgb(128 128 128 / 10%);
-    
     backdrop-filter: blur( 7px);
     -webkit-backdrop-filter: blur( 5.0px);
     border-radius: 15px;
-    
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
+
 .no-scrollbar::-webkit-scrollbar {
     display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
+
 .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
-
-:root {
-    --video-width: 100vw;
-    --video-height: 100vh;
+canvas {
+    display: block;
+    vertical-align: bottom;
 }
 
-@media (min-aspect-ratio: 16/9) {
-    :root {
-        --video-height: 56.25vw;
-    }
-}
+/* ---- particles.js container ---- */
 
-@media (max-aspect-ratio: 16/9) {
-    :root {
-        --video-width: 177.78vh;
-    }
-}
-
-.video-background {
-    background: #000;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -99;
-}
-
-.video-foreground, .video-background iframe {
+#particles-js {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none;
+    background-color: #203e24;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
 }
 
-#vidtop-content {
-    top: 0;
-    color: #fff;
-}
+/* ---- stats.js ---- */
 
-.vid-info {
+.count-particles {
+    background: #000022;
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 33%;
-    background: rgba(0, 0, 0, 0.3);
-    color: #fff;
-    padding: 1rem;
-    font-family: Avenir, Helvetica, sans-serif;
+    top: 48px;
+    left: 0;
+    width: 80px;
+    color: #13E8E9;
+    font-size: .8em;
+    text-align: left;
+    text-indent: 4px;
+    line-height: 14px;
+    padding-bottom: 2px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
 }
 
-.vid-info h1 {
-    font-size: 2rem;
-    font-weight: 700;
-    margin-top: 0;
-    line-height: 1.2;
+.js-count-particles {
+    font-size: 1.1em;
 }
 
-.vid-info a {
-    display: block;
-    color: #fff;
-    text-decoration: none;
-    background: rgba(0, 0, 0, 0.5);
-    transition: .6s background;
-    border-bottom: none;
-    margin: 1rem auto;
-    text-align: center;
+#stats, .count-particles {
+    -webkit-user-select: none;
+    margin-top: 5px;
+    margin-left: 5px;
 }
 
-@media (min-aspect-ratio: 16/9) {
-    .video-foreground {
-        height: 300%;
-        top: -100%;
-    }
+#stats {
+    border-radius: 3px 3px 0 0;
+    overflow: hidden;
 }
 
-@media (max-aspect-ratio: 16/9) {
-    .video-foreground {
-        width: 300%;
-        left: -100%;
-    }
-}
-
-@media all and (max-width: 600px) {
-    .vid-info {
-        width: 50%;
-        padding: .5rem;
-    }
-    .vid-info h1 {
-        margin-bottom: .2rem;
-    }
-}
-
-@media all and (max-width: 500px) {
-    .vid-info .acronym {
-        display: none;
-    }
+.count-particles {
+    border-radius: 0 0 3px 3px;
 }
